# bp-esc

./: .env.secrets.example  .envrc  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  TESTING.md  devenv.nix  package-lock.json  package.json  result
+agents/commands/: dev.md  warm-cache.md
+agents/rules/: AGENTS.md  DEVELOPER.md
+pm/: 0064.51341f6.implement-macos-menubar-icon.md  0208.19f3433.simplify-onboarding-to-use-settings-screen.md  PRD.md  README.md
+pm/backlog/: 0000.a1b2c3d.document-pm-backlog-structure.md  0053.31175f1.refine-macos-menubar-app.md  0064.0654347.setup-tauri-project.md  0128.48ef612.implement-config-file-io.md  0128.694f6f5.setup-macos-signing-and-notarization-pipeline.md  0192.027b4de.implement-openrouter-api-client.md  0256.417623b.build-minimal-ui.md  0320.35817d3.fix-onboarding-navigation-after-api-key-save.md  0320.74e4609.add-error-handling.md  0512.349429b.investigate-hdiutil-dmg-creation-failure.md  P50--3631677--mood-migrate-sa-key-to-macos-keychain.md  P50.1673374.implement-launch-at-login-setting-tauri-autostart-plugin.md  P50.35631b4.mcp-server-for-vscode-context.md
+pm/cancelled/: 0320.7ca24a3.investigate-tauri-window-auto-resize-failure.md
+pm/done/: 0000.a1b2c3d.document-pm-backlog-structure.md  0053.31175f1.refine-macos-menubar-app.md  0064.0654347.setup-tauri-project.md  0256.417623b.build-minimal-ui.md  A40.1214616.implement-dynamic-version-management.md  A53.18de4d4.remaining-balance-percent-menubar.md  A64.51341f6.implement-macos-menubar-icon.md  B28--48ef612--implement-config-file-io.md  B92.027b4de.implement-openrouter-api-client.md  B92.5b6d224.implement-professional-window-auto-resize-using-scrollheight.md  D20--74e4609--add-error-handling.md  D84--2b2c3b8--implement-unified-layout-system-with-auto-resize.md  E16.031e4c5.implement-rust-build-caching-for-ci.md  F00.improve-app-start-window-behavior.md  P30--68425e2--fix-tauri-window-auto-resize-reliably.md  P30.677c048.fix-footer-and-menubar-icon.md  P50--1f1b66a--decouple-data-fetching-from-view-navigation.md  P50.48d7411.implement-dynamic-multi-api-key-management.md
+pm/on-hold/: A20.226d315.force-monochrome-menubar-liquid-glass-workaround.md
.cursor/commands/: build.md  release.md
.cursor/rules/: AGENTS.md  DEVELOPER.md  DEVELOPER.mdc
.github/workflows/: cache-warming.yml  release.yml
docs/: DEVELOPMENT-ENVIRONMENT-GUIDE.md  SPARKLE-AUTO-UPDATE.md  TECHNICAL-GUIDE.md  TESTING.md  manual-release.md  manual-warm-cache.md  openrouter-api-notes.md
scripts/: README.md  build-dmg.js  create-backlog-item.sh  fix-dylib.sh  release.sh  warm-cache.sh
src/: app.js  index.html  style.css  test-api.html  test-config.html
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
