[package]
name = "bp-esc"
version = "0.3.6"
description = "BYTEPOETS Employee Self-Care App"
authors = ["BYTEPOETS GmbH"]
license = "Proprietary"
repository = "https://github.com/bytepoets-mba/bp-esc"
default-run = "bp-esc"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-window-state = "2.2.0"
tauri = { version = "2.5", features = ["tray-icon", "image-png", "macos-private-api"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
open = "3.2.0"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-autostart = "2.0.0-beta.10"
tokio = { version = "1", features = ["time"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
